# anav

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.en.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  docker.yml
server/: api.rs  bookmark.rs  config.rs  env.rs  error.rs  main.rs  session.rs  state.rs
server/middleware/: auth.rs
src/: App.tsx  index.css  main.tsx
src/components/: BookmarkCard.tsx  BookmarkCardSkeleton.tsx  DeleteBookmarkDialog.tsx  FloatingActionButton.tsx  IconPicker.tsx  LanguageToggle.tsx  NewBookmarkDialog.tsx  SearchBox.tsx  SearchDropdown.tsx  SortableBookmarkCard.tsx  SortableTagButton.tsx  ThemeProvider.tsx  ThemeToggle.tsx
src/components/ui/: input.tsx  sonner.tsx  tag-input.tsx
src/hooks/: use-language-sync.ts  use-media-query.ts  use-responsive-modal.ts  use-theme.ts
src/lib/: api.ts  axios.ts  bookmark-utils.ts  highlight.tsx  i18n.ts  search.ts  store.ts  utils.ts
src/locales/: en.json  zh.json
src/pages/: HomePage.tsx  LoginPage.tsx  SettingsPage.tsx
src/types/: bookmark.ts
