[package]
name = "anav-server"
version = "1.1.0"
edition = "2024"

[[bin]]
name = "anav-server"
path = "server/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "fs", "signal"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "fs", "catch-panic", "trace"] }
uuid = { version = "1.10.2", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
thiserror = "2.0.17"
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros"] }
indexmap = { version = "2.13.0", features = ["serde"] }
image = "0.25.9"
reqwest = { version = "0.13.1", features = ["json"] }
scraper = "0.25.0"
base64 = "0.22.1"
url = "2.5.8"
